@@ -17,5 +17,5 @@ noinst_LTLIBRARIES = libutilities.la
 libutilities_la_LIBADD = @LTLIBICONV@
 libutilities_la_SOURCES = hashutils.cpp i18nutils.cpp nbooleans.cpp nmatrix2.cpp nmpi.cpp nrational.cpp nthread.cpp stringutils.cpp xmlutils.cpp zstream.cpp
 
-utilitiesinclude_HEADERS = boostutils.h hashmap.h hashset.h hashutils.h i18nutils.h memutils.h nbooleans.h nindexedarray.h nlistoncall.h nmarkedvector.h nmatrix2.h nmpi.h nproperty.h nrational.h nthread.h ptrutils.h stlutils.h stringutils.h stringutils.tcc xmlutils.h zstream.h
+utilitiesinclude_HEADERS = bitmanip.h boostutils.h hashmap.h hashset.h hashutils.h i18nutils.h memutils.h nbitmask.h nbooleans.h nindexedarray.h nlistoncall.h nmarkedvector.h nmatrix2.h nmpi.h nproperty.h nrational.h nthread.h ptrutils.h stlutils.h stringutils.h stringutils.tcc xmlutils.h zstream.h
 
