@@ -10,10 +10,12 @@ Regina - A Normal Surface Theory Calculator
 Version 4.5.1  [ Under development ]
 
     ENGINE:
-        Class NBitmask, NBitmask1, NBitmask2:
+        Class NBitmask, NBitmask1, NBitmask2, BitManipulator:
             - New classes for manipulating bitmasks.  NBitmask is for bitmasks
               of arbitrary length, whereas NBitmask1 and NBitmask2 are
               optimised for situations where the length is known to be small.
+              BitManipulator makes it easier to offer optimised template
+              specialisations.
         Class NDoubleDescriptor:
             - Streamlined the vertex enumeration routine, which is now
               significantly faster.
